--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -17,9 +17,9 @@ a {
     @apply py-10xs md:py-10md text-16xs md:text-16md;
 }
 
-/* nextjs-portal {
+nextjs-portal {
     display: none;
-} */
+}
 
 .db-badge{
     background: #16a085;
